--- a/Changes
+++ b/Changes
@@ -1,7 +1,12 @@
 Revision history for Perl extension Scalar::Alias
 
+0.03
+	- implement list alias syntax:
+		- my alias($x, $y) = @_
+		- (my $x, my alias $y) = @_
+
 0.02 Wed May 20 18:19:39 2009 
-	- rename Lexical::Alias to Scalar::Alias
+	- renamed from Lexical::Alias
 
 0.01 Wed May 20 08:12:40 2009
-        - original version; created by Module::Setup
+	- original version; created by Module::Setup
