--- a/README
+++ b/README
@@ -1,11 +1,11 @@
-This is Perl module Lexical::Alias.
+This is Perl module Scalar::Alias.
 
 INSTALLATION
 
-Lexical::Alias installation is straightforward. If your CPAN shell is set up,
+Scalar::Alias installation is straightforward. If your CPAN shell is set up,
 you should just be able to do
 
-    $ cpan Lexical::Alias
+    $ cpan Scalar::Alias
 
 Download it, unpack it, then build it as per the usual:
 
@@ -18,9 +18,9 @@ Then install it:
 
 DOCUMENTATION
 
-Lexical::Alias documentation is available as in POD. So you can do:
+Scalar::Alias documentation is available as in POD. So you can do:
 
-    $ perldoc Lexical::Alias
+    $ perldoc Scalar::Alias
 
 to read the documentation online with your favorite pager.
 
