Import of GFUJI/Scalar-Alias-0.06 from CPAN.
gitpan-cpan-distribution: Scalar-Alias
gitpan-cpan-version:      0.06
gitpan-cpan-path:         GFUJI/Scalar-Alias-0.06.tar.gz
gitpan-cpan-author:       GFUJI
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension Scalar::Alias
 
+
+0.06 Mon Jun 15 22:48:11 2009
+	- update ppport.h to 3.19
+	- use PERL_UNUSED_ARG instead of PERL_UNUSED_VAR
+
 0.05 Sat Jun  6 08:36:51 2009
 	- internal cleanup
 
